Move to Java 1.8, minor corrections.